tests/ui/auto_enum/rejected-by-rustc.stderr
error: expected `{`, found keyword `return`
  --> $DIR/rejected-by-rustc.rs:11:12
   |
11 |     } else return {
   |            ^^^^^^ expected `{`
help: try placing this code inside a block
   |
11 |     } else { return {
12 |         //~^ ERROR expected `{`, found keyword `return`
13 |         2..=10
14 |     } }
   |

error: attributes are not yet allowed on `if` expressions
  --> $DIR/rejected-by-rustc.rs:22:9
   |
22 |         #[nested]
   |         ^^^^^^^^^
